Change the variables colours

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,4 +1,4 @@
-$primary-color: #359dd8;
-$primary-color-light: #4d5f76;
-$secondary-color: #a65748;
-$secondary-color-light: #a65748;
+$primary-color: #42579b;
+$primary-color-light: #334367;
+$secondary-color: #8e8e8e;
+$secondary-color-light: #c8c8c8;
