Change header and footer colours

--- a/src/components/AaFooter/AaFooter.scss
+++ b/src/components/AaFooter/AaFooter.scss
@@ -8,7 +8,7 @@ footer.footer {
   justify-content: space-between;
   border-top: 8px solid $primary-invert;
   padding: 20px;
-  background-color: #333333;
+  background-color: #ffffff;
 }
 
 .footerAddress {
