--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -13,7 +13,7 @@ body
 .top
   padding: 20px
   border-bottom: 5px solid #fdcd3a
-  background-color: #333333
+  background-color: #ffffff
 
 .content .taglist
   list-style: none
