Add colours to all

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -2,10 +2,10 @@
 
 // Config vars
 
-$primary: #0d333c;
-$primary-invert: #fdcd3a;
-$secondary: #24aab0;
-$gray: #fafafa;
+$primary: #42579b;
+$primary-invert: #42579b;
+$secondary: #8e8e8e;
+$gray: #8e8e8e;
 
 body
   font-family: 'ABeeZee', sans-serif !important
