--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -6,7 +6,7 @@ $primary: #42579b;
 $primary-invert: #42579b;
 $secondary: #8e8e8e;
 $gray: #8e8e8e;
-$gray-light: #dadada;
+$gray-light: #e1e1e1;
 
 body
   font-family: 'ABeeZee', sans-serif !important
